--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.15.0",
-    "react-spinners": "^0.13.8",
-    "socket.io-client": "^4.7.2"
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
