--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
+    "@emotion/react": "^11.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-query": "^4.33.0",
     "axios": "^1.4.0",
+    "emoji-mart": "^5.5.2",
     "firebase": "^10.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-joyride": "^2.5.5",
+    "react-lottie-player": "^1.5.5",
     "react-router-dom": "^6.15.0",
     "react-spinners": "^0.13.8"
   },
